#!/usr/bin/env python3
"""
GPUç¯å¢ƒé…ç½®éªŒè¯è„šæœ¬
éªŒè¯MyStocksé¡¹ç›®çš„GPUåŠ é€Ÿç¯å¢ƒæ˜¯å¦æ­£ç¡®é…ç½®
é€‚ç”¨äºRTX 2080 GPU + CUDA 12.xç¯å¢ƒ
"""

import sys
import time
import traceback
from typing import Dict


class GPUEnvironmentTester:
    """GPUç¯å¢ƒæµ‹è¯•å™¨"""

    def __init__(self):
        self.test_results = {}
        self.gpu_info = {}

    def test_nvidia_driver(self) -> bool:
        """æµ‹è¯•NVIDIAé©±åŠ¨çŠ¶æ€"""
        print("ğŸ” æµ‹è¯•NVIDIAé©±åŠ¨...")
        try:
            import subprocess

            result = subprocess.run(
                ["nvidia-smi"], capture_output=True, text=True, timeout=10
            )
            if result.returncode == 0:
                # è§£æGPUä¿¡æ¯
                lines = result.stdout.split("\n")
                for line in lines:
                    if "GPU Name" in line:
                        gpu_name = line.split("GPU Name")[1].strip()
                        self.gpu_info["name"] = gpu_name
                    elif "Driver Version" in line:
                        driver_version = line.split("Driver Version")[1].split()[0]
                        self.gpu_info["driver_version"] = driver_version
                    elif "CUDA Version" in line:
                        cuda_version = line.split("CUDA Version")[1].split()[0]
                        self.gpu_info["cuda_version"] = cuda_version

                self.test_results["nvidia_driver"] = True
                print(f"âœ… NVIDIAé©±åŠ¨æ­£å¸¸: {self.gpu_info}")
                return True
            else:
                self.test_results["nvidia_driver"] = False
                print("âŒ NVIDIAé©±åŠ¨å¼‚å¸¸")
                return False
        except Exception as e:
            self.test_results["nvidia_driver"] = False
            print(f"âŒ NVIDIAé©±åŠ¨æµ‹è¯•å¤±è´¥: {e}")
            return False

    def test_cuda_runtime(self) -> bool:
        """æµ‹è¯•CUDAè¿è¡Œæ—¶"""
        print("ğŸ” æµ‹è¯•CUDAè¿è¡Œæ—¶...")
        try:
            import cupy as cp

            # åˆ›å»ºç®€å•çš„GPUæ•°ç»„
            x = cp.array([1, 2, 3, 4, 5])
            y = x * 2
            result = cp.asnumpy(y)

            if list(result) == [2, 4, 6, 8, 10]:
                self.test_results["cuda_runtime"] = True
                print(f"âœ… CUDAè¿è¡Œæ—¶æ­£å¸¸ (CuPyç‰ˆæœ¬: {cp.__version__})")
                return True
            else:
                self.test_results["cuda_runtime"] = False
                print("âŒ CUDAè¿è¡Œæ—¶è®¡ç®—é”™è¯¯")
                return False
        except Exception as e:
            self.test_results["cuda_runtime"] = False
            print(f"âŒ CUDAè¿è¡Œæ—¶æµ‹è¯•å¤±è´¥: {e}")
            return False

    def test_cudf(self) -> bool:
        """æµ‹è¯•cuDF DataFrame"""
        print("ğŸ” æµ‹è¯•cuDF DataFrame...")
        try:
            import cudf

            # åˆ›å»ºGPU DataFrame
            data = {
                "stock_code": ["000001", "000002", "000003", "000004", "000005"],
                "price": [10.5, 15.2, 8.7, 12.3, 9.8],
                "volume": [1000000, 2000000, 1500000, 800000, 1200000],
                "date": ["2025-11-03"] * 5,
            }

            df_gpu = cudf.DataFrame(data)

            # æµ‹è¯•GPUè®¡ç®—
            df_gpu["price_squared"] = df_gpu["price"] ** 2
            df_gpu["volume_normalized"] = (
                df_gpu["volume"] - df_gpu["volume"].mean()
            ) / df_gpu["volume"].std()

            # è½¬æ¢å›CPUéªŒè¯
            result_cpu = df_gpu.to_pandas()

            # éªŒè¯è®¡ç®—ç»“æœ
            expected_price_squared = [110.25, 231.04, 75.69, 151.29, 96.04]
            price_squared_match = (
                list(result_cpu["price_squared"].round(2)) == expected_price_squared
            )

            if price_squared_match and len(result_cpu) == 5:
                self.test_results["cudf"] = True
                print(f"âœ… cuDFæ­£å¸¸ (ç‰ˆæœ¬: {cudf.__version__})")
                print(f"   GPUè®¡ç®—ç¤ºä¾‹: {len(df_gpu)}è¡Œæ•°æ®å¤„ç†å®Œæˆ")
                return True
            else:
                self.test_results["cudf"] = False
                print("âŒ cuDFè®¡ç®—é”™è¯¯")
                return False
        except Exception as e:
            self.test_results["cudf"] = False
            print(f"âŒ cuDFæµ‹è¯•å¤±è´¥: {e}")
            return False

    def test_cuml(self) -> bool:
        """æµ‹è¯•cuMLæœºå™¨å­¦ä¹ åº“"""
        print("ğŸ” æµ‹è¯•cuMLæœºå™¨å­¦ä¹ ...")
        try:
            import cuml
            import cupy as cp

            # æµ‹è¯•çº¿æ€§å›å½’
            from cuml.linear_model import LinearRegression

            # åˆ›å»ºæµ‹è¯•æ•°æ®
            X = cp.array([[1], [2], [3], [4], [5]])
            y = cp.array([2, 4, 6, 8, 10]) + cp.random.normal(0, 0.1, 5)

            # è®­ç»ƒæ¨¡å‹
            model = LinearRegression()
            model.fit(X, y)

            # é¢„æµ‹
            predictions = model.predict(X)

            # éªŒè¯æ¨¡å‹
            score = model.score(X, y)
            if 0.8 <= score <= 1.0:  # RÂ²åˆ†æ•°åº”è¯¥åœ¨åˆç†èŒƒå›´å†…
                self.test_results["cuml"] = True
                print(f"âœ… cuMLæ­£å¸¸ (ç‰ˆæœ¬: {cuml.__version__})")
                print(f"   çº¿æ€§å›å½’RÂ²åˆ†æ•°: {score:.4f}")
                return True
            else:
                self.test_results["cuml"] = False
                print("âŒ cuMLæ¨¡å‹æ€§èƒ½å¼‚å¸¸")
                return False
        except Exception as e:
            self.test_results["cuml"] = False
            print(f"âŒ cuMLæµ‹è¯•å¤±è´¥: {e}")
            return False

    def test_quantitative_trading_scenarios(self) -> bool:
        """æµ‹è¯•é‡åŒ–äº¤æ˜“åœºæ™¯"""
        print("ğŸ” æµ‹è¯•é‡åŒ–äº¤æ˜“åœºæ™¯...")
        try:
            import cudf
            import cupy as cp
            import numpy as np

            # åœºæ™¯1: å¤§è§„æ¨¡å†å²æ•°æ®å›æµ‹æ¨¡æ‹Ÿ
            print("   1. æ¨¡æ‹Ÿå¤§è§„æ¨¡å†å²æ•°æ®å›æµ‹...")
            start_time = time.time()

            # åˆ›å»ºå¤§é‡æ¨¡æ‹Ÿè‚¡ç¥¨æ•°æ®
            num_stocks = 1000
            num_days = 252  # 1å¹´æ•°æ®
            np.random.seed(42)

            # ç”Ÿæˆæ¨¡æ‹Ÿæ•°æ® (ä½¿ç”¨GPU)
            stocks = cudf.DataFrame(
                {
                    "stock_code": [f"000{i:04d}" for i in range(num_stocks)],
                    "annual_return": cp.random.normal(0.1, 0.2, num_stocks),
                    "volatility": cp.abs(cp.random.normal(0.15, 0.1, num_stocks)),
                    "market_cap": cp.random.lognormal(15, 1, num_stocks),
                }
            )

            # è®¡ç®—å¤æ™®æ¯”ç‡ (GPUå¹¶è¡Œè®¡ç®—)
            stocks["sharpe_ratio"] = stocks["annual_return"] / stocks["volatility"]

            # æ¨¡æ‹Ÿç­–ç•¥ç­›é€‰ (GPUè¿‡æ»¤)
            strategy_mask = (stocks["sharpe_ratio"] > 1.0) & (
                stocks["market_cap"] > 1e8
            )
            selected_stocks = stocks[strategy_mask]

            processing_time = time.time() - start_time
            selected_count = len(selected_stocks)

            print(f"      å¤„ç†äº† {num_stocks} åªè‚¡ç¥¨ï¼Œ{selected_count} åªç¬¦åˆç­–ç•¥æ¡ä»¶")
            print(f"      GPUå¤„ç†æ—¶é—´: {processing_time:.4f}ç§’")

            # åœºæ™¯2: å®æ—¶ç‰¹å¾è®¡ç®—
            print("   2. æ¨¡æ‹Ÿå®æ—¶ç‰¹å¾è®¡ç®—...")
            start_time = time.time()

            # æ¨¡æ‹Ÿå®æ—¶æ•°æ®æµ
            real_time_data = cudf.DataFrame(
                {
                    "price": cp.random.uniform(10, 100, 10000),
                    "volume": cp.random.uniform(1000, 100000, 10000),
                    "timestamp": range(10000),
                }
            )

            # æ‰¹é‡è®¡ç®—æŠ€æœ¯æŒ‡æ ‡ (GPUåŠ é€Ÿ)
            real_time_data["sma_20"] = real_time_data["price"].rolling(20).mean()
            real_time_data["std_20"] = real_time_data["price"].rolling(20).std()
            real_time_data["rsi"] = 100 - (
                100 / (1 + real_time_data["price"].pct_change().rolling(14).mean())
            )

            feature_time = time.time() - start_time
            print(f"      å¤„ç†äº† {len(real_time_data)} æ¡å®æ—¶æ•°æ®")
            print(f"      ç‰¹å¾è®¡ç®—æ—¶é—´: {feature_time:.4f}ç§’")

            # åœºæ™¯3: å¤šå› å­æ¨¡å‹
            print("   3. æ¨¡æ‹Ÿå¤šå› å­æ¨¡å‹...")
            start_time = time.time()

            # åˆ›å»ºå› å­æ•°æ®
            factors = cudf.DataFrame(
                {
                    "pe_ratio": cp.random.uniform(10, 50, 500),
                    "pb_ratio": cp.random.uniform(1, 10, 500),
                    "roe": cp.random.uniform(0.05, 0.25, 500),
                    "momentum": cp.random.normal(0, 0.1, 500),
                    "size": cp.random.lognormal(10, 1, 500),
                }
            )

            # è®¡ç®—å› å­æƒé‡ (GPUçŸ©é˜µè¿ç®—)
            weights = cp.array([0.2, 0.2, 0.3, 0.15, 0.15])
            composite_score = (factors * weights).sum(axis=1)

            # å› å­æ’å (GPUæ’åº)
            factors["composite_score"] = composite_score
            factors["rank"] = (
                factors["composite_score"]
                .rank(method="dense", ascending=False)
                .to_numpy()
            )

            model_time = time.time() - start_time
            print(f"      å¤„ç†äº† {len(factors)} åªè‚¡ç¥¨çš„å› å­åˆ†æ")
            print(f"      æ¨¡å‹è®¡ç®—æ—¶é—´: {model_time:.4f}ç§’")

            # ç»¼åˆè¯„ä¼°
            total_time = processing_time + feature_time + model_time
            if total_time < 5.0:  # æ€»æ—¶é—´åº”è¯¥åœ¨5ç§’ä»¥å†…
                self.test_results["quantitative_scenarios"] = True
                print(f"âœ… é‡åŒ–äº¤æ˜“åœºæ™¯æµ‹è¯•é€šè¿‡ (æ€»è€—æ—¶: {total_time:.4f}ç§’)")
                return True
            else:
                self.test_results["quantitative_scenarios"] = False
                print(f"âš ï¸  é‡åŒ–äº¤æ˜“åœºæ™¯æ€§èƒ½ä¸€èˆ¬ (æ€»è€—æ—¶: {total_time:.4f}ç§’)")
                return True  # ä»ç„¶é€šè¿‡ï¼Œåªæ˜¯æ€§èƒ½æç¤º

        except Exception as e:
            self.test_results["quantitative_scenarios"] = False
            print(f"âŒ é‡åŒ–äº¤æ˜“åœºæ™¯æµ‹è¯•å¤±è´¥: {e}")
            return False

    def test_memory_management(self) -> bool:
        """æµ‹è¯•GPUå†…å­˜ç®¡ç†"""
        print("ğŸ” æµ‹è¯•GPUå†…å­˜ç®¡ç†...")
        try:
            import cupy as cp
            import gc

            # è·å–åˆå§‹å†…å­˜
            initial_memory = cp.get_default_memory_pool().used_bytes()
            print(f"   åˆå§‹GPUå†…å­˜ä½¿ç”¨: {initial_memory / 1024 / 1024:.2f} MB")

            # åˆ†é…å’Œé‡Šæ”¾å†…å­˜
            allocations = []
            for i in range(3):
                # åˆ†é…ä¸åŒå¤§å°çš„æ•°ç»„
                size = 100_000 * (i + 1)
                arr = cp.random.random(size)
                allocations.append(arr)
                print(f"   åˆ†é… {size} ä¸ªå…ƒç´ : {arr.nbytes / 1024 / 1024:.2f} MB")

            # å½“å‰å†…å­˜ä½¿ç”¨
            current_memory = cp.get_default_memory_pool().used_bytes()
            print(f"   å½“å‰GPUå†…å­˜ä½¿ç”¨: {current_memory / 1024 / 1024:.2f} MB")

            # é‡Šæ”¾å†…å­˜
            for arr in allocations:
                del arr
            gc.collect()

            # å¼ºåˆ¶é‡Šæ”¾GPUå†…å­˜
            cp.get_default_memory_pool().free_all_blocks()

            # æœ€ç»ˆå†…å­˜ä½¿ç”¨
            final_memory = cp.get_default_memory_pool().used_bytes()
            print(f"   æœ€ç»ˆGPUå†…å­˜ä½¿ç”¨: {final_memory / 1024 / 1024:.2f} MB")

            # éªŒè¯å†…å­˜é‡Šæ”¾
            memory_freed = current_memory - final_memory
            if memory_freed > 10 * 1024 * 1024:  # é‡Šæ”¾äº†è‡³å°‘10MB
                self.test_results["memory_management"] = True
                print("âœ… GPUå†…å­˜ç®¡ç†æ­£å¸¸")
                return True
            else:
                self.test_results["memory_management"] = False
                print("âš ï¸  GPUå†…å­˜é‡Šæ”¾ä¸å……åˆ†")
                return True  # ä»ç„¶é€šè¿‡ï¼Œåªæ˜¯æœ‰è­¦å‘Š

        except Exception as e:
            self.test_results["memory_management"] = False
            print(f"âŒ GPUå†…å­˜ç®¡ç†æµ‹è¯•å¤±è´¥: {e}")
            return False

    def run_all_tests(self) -> Dict:
        """è¿è¡Œæ‰€æœ‰æµ‹è¯•"""
        print("=" * 60)
        print("ğŸš€ å¼€å§‹GPUç¯å¢ƒéªŒè¯æµ‹è¯•")
        print("=" * 60)

        # è¿è¡Œæ‰€æœ‰æµ‹è¯•
        test_methods = [
            self.test_nvidia_driver,
            self.test_cuda_runtime,
            self.test_cudf,
            self.test_cuml,
            self.test_memory_management,
            self.test_quantitative_trading_scenarios,
        ]

        passed = 0
        total = len(test_methods)

        for method in test_methods:
            try:
                result = method()
                if result:
                    passed += 1
            except Exception as e:
                print(f"âŒ æµ‹è¯•å¼‚å¸¸: {e}")
                traceback.print_exc()

        # ç”Ÿæˆæµ‹è¯•æŠ¥å‘Š
        print("\n" + "=" * 60)
        print("ğŸ“Š GPUç¯å¢ƒæµ‹è¯•æŠ¥å‘Š")
        print("=" * 60)

        print(f"æ€»æµ‹è¯•é¡¹ç›®: {total}")
        print(f"é€šè¿‡é¡¹ç›®: {passed}")
        print(f"å¤±è´¥é¡¹ç›®: {total - passed}")
        print(f"é€šè¿‡ç‡: {(passed / total) * 100:.1f}%")

        # æ˜¾ç¤ºè¯¦ç»†ç»“æœ
        for test_name, result in self.test_results.items():
            status = "âœ… é€šè¿‡" if result else "âŒ å¤±è´¥"
            print(f"  {test_name}: {status}")

        # æ˜¾ç¤ºGPUä¿¡æ¯
        if self.gpu_info:
            print("\nğŸ–¥ï¸  GPUç¡¬ä»¶ä¿¡æ¯:")
            for key, value in self.gpu_info.items():
                print(f"  {key}: {value}")

        # ç”Ÿæˆå»ºè®®
        print("\nğŸ’¡ å»ºè®®:")
        if passed == total:
            print("ğŸ‰ GPUç¯å¢ƒå®Œç¾ï¼å¯ä»¥å¯ç”¨æ‰€æœ‰GPUåŠ é€ŸåŠŸèƒ½")
        elif passed >= total - 1:
            print("âœ… GPUç¯å¢ƒè‰¯å¥½ï¼Œå¤§éƒ¨åˆ†åŠŸèƒ½å¯ä»¥æ­£å¸¸ä½¿ç”¨")
            print("ğŸ’¡ å»ºè®®æ£€æŸ¥å¤±è´¥é¡¹ç›®çš„è¯¦ç»†é”™è¯¯ä¿¡æ¯")
        else:
            print("âš ï¸  GPUç¯å¢ƒå­˜åœ¨é—®é¢˜ï¼Œå»ºè®®å…ˆä¿®å¤åŸºç¡€é…ç½®")
            print("ğŸ’¡ å¯ä»¥å°è¯•é‡æ–°å®‰è£…GPUä¾èµ–æˆ–æ£€æŸ¥CUDAç‰ˆæœ¬")

        return {
            "total": total,
            "passed": passed,
            "failed": total - passed,
            "pass_rate": (passed / total) * 100,
            "results": self.test_results,
            "gpu_info": self.gpu_info,
        }

    def generate_test_code(self) -> str:
        """ç”Ÿæˆæµ‹è¯•ä»£ç ç¤ºä¾‹"""
        test_code = '''
# MyStocks GPUåŠ é€Ÿæµ‹è¯•ä»£ç ç¤ºä¾‹
import cudf
import cupy as cp
import cuml
import numpy as np

# 1. å¤§è§„æ¨¡å†å²æ•°æ®å›æµ‹
def backtest_strategies_gpu(stock_data, strategies):
    """GPUåŠ é€Ÿçš„ç­–ç•¥å›æµ‹"""
    df_gpu = cudf.DataFrame(stock_data)

    results = []
    for strategy in strategies:
        # GPUå¹¶è¡Œè®¡ç®—ç­–ç•¥ä¿¡å·
        signals = strategy.calculate_signals(df_gpu)

        # GPUè®¡ç®—æ”¶ç›Š
        returns = df_gpu['close'].pct_change()
        strategy_returns = returns * signals

        # GPUè®¡ç®—æ€§èƒ½æŒ‡æ ‡
        sharpe = (strategy_returns.mean() / strategy_returns.std()) * np.sqrt(252)
        max_drawdown = (strategy_returns.cumsum().cummax() - strategy_returns.cumsum()).max()

        results.append({
            'strategy': strategy.name,
            'sharpe': sharpe,
            'max_drawdown': max_drawdown
        })

    return results

# 2. å®æ—¶ç‰¹å¾è®¡ç®—
def calculate_features_gpu(real_time_data):
    """GPUåŠ é€Ÿçš„å®æ—¶ç‰¹å¾è®¡ç®—"""
    df_gpu = cudf.DataFrame(real_time_data)

    # æŠ€æœ¯æŒ‡æ ‡è®¡ç®— (GPUåŠ é€Ÿ)
    df_gpu['sma_20'] = df_gpu['price'].rolling(20).mean()
    df_gpu['sma_50'] = df_gpu['price'].rolling(50).mean()
    df_gpu['rsi'] = calculate_rsi_gpu(df_gpu['price'])
    df_gpu['macd'], df_gpu['macd_signal'] = calculate_macd_gpu(df_gpu['price'])

    return df_gpu

# 3. å¤šå› å­æ¨¡å‹
def multi_factor_model_gpu(factors_data):
    """GPUåŠ é€Ÿçš„å¤šå› å­æ¨¡å‹"""
    df_gpu = cudf.DataFrame(factors_data)

    # å› å­æ ‡å‡†åŒ– (GPU)
    for factor in ['pe', 'pb', 'roe', 'momentum']:
        df_gpu[f'{factor}_normalized'] = (df_gpu[factor] - df_gpu[factor].mean()) / df_gpu[factor].std()

    # å› å­æƒé‡è®¡ç®— (GPUçŸ©é˜µè¿ç®—)
    weights = cp.array([0.25, 0.25, 0.3, 0.2])  # å› å­æƒé‡
    factor_columns = ['pe_normalized', 'pb_normalized', 'roe_normalized', 'momentum_normalized']

    df_gpu['composite_score'] = (df_gpu[factor_columns] * weights).sum(axis=1)
    df_gpu['rank'] = df_gpu['composite_score'].rank(method='dense', ascending=False)

    return df_gpu

# 4. é£é™©è®¡ç®—
def risk_calculation_gpu(portfolio_data):
    """GPUåŠ é€Ÿçš„é£é™©è®¡ç®—"""
    df_gpu = cudf.DataFrame(portfolio_data)

    # åæ–¹å·®çŸ©é˜µ (GPU)
    returns = df_gpu[['stock1_return', 'stock2_return']].pct_change().dropna()
    cov_matrix = returns.cov().to_numpy()  # è½¬æ¢ä¸ºCPUç”¨äºè®¡ç®—

    # VaRè®¡ç®—
    portfolio_returns = returns.mean(axis=1)
    var_95 = cp.percentile(cp.array(portfolio_returns), 5)

    return {
        'covariance_matrix': cov_matrix,
        'var_95': var_95,
        'volatility': portfolio_returns.std()
    }
'''
        return test_code


def main():
    """ä¸»å‡½æ•°"""
    # åˆ›å»ºæµ‹è¯•å™¨
    tester = GPUEnvironmentTester()

    # è¿è¡Œæµ‹è¯•
    results = tester.run_all_tests()

    # ç”Ÿæˆæµ‹è¯•ä»£ç 
    if results["passed"] >= results["total"] - 1:
        print("\nğŸ“ ç”Ÿæˆçš„æµ‹è¯•ä»£ç å·²ä¿å­˜åˆ°: gpu_test_examples.py")
        with open("gpu_test_examples.py", "w", encoding="utf-8") as f:
            f.write(tester.generate_test_code())

    return results


if __name__ == "__main__":
    results = main()

    # è®¾ç½®é€€å‡ºç 
    sys.exit(0 if results["pass_rate"] >= 80 else 1)
