"""
æµ‹è¯•MockBusinessDataSourceå®Œæ•´åŠŸèƒ½

éªŒè¯æ‰€æœ‰10ä¸ªä¸šåŠ¡æ•°æ®æ¥å£æ–¹æ³•:
- get_dashboard_summary()
- get_sector_performance()
- execute_backtest()
- get_backtest_results()
- calculate_risk_metrics()
- check_risk_alerts()
- analyze_trading_signals()
- get_portfolio_analysis()
- perform_attribution_analysis()
- execute_stock_screener()

ç‰ˆæœ¬: 1.0.0
æ—¥æœŸ: 2025-11-21
"""

import sys
import os
from datetime import datetime, timedelta

# æ·»åŠ é¡¹ç›®æ ¹ç›®å½•åˆ°Pythonè·¯å¾„
project_root = os.path.dirname(
    os.path.dirname(os.path.dirname(os.path.abspath(__file__)))
)
sys.path.insert(0, project_root)

from src.data_sources import get_business_source


def test_dashboard_summary():
    """æµ‹è¯•ä»ªè¡¨ç›˜æ‘˜è¦"""
    print("\n" + "=" * 80)
    print("æµ‹è¯• 1/10: get_dashboard_summary()")
    print("=" * 80)

    biz_source = get_business_source()

    dashboard = biz_source.get_dashboard_summary(user_id=1)

    assert "market_overview" in dashboard, "ç¼ºå°‘å¸‚åœºæ¦‚è§ˆæ•°æ®"
    assert "watchlist_performance" in dashboard, "ç¼ºå°‘è‡ªé€‰è‚¡è¡¨ç°æ•°æ®"
    assert "top_fund_flow" in dashboard, "ç¼ºå°‘èµ„é‡‘æµå‘æ•°æ®"
    assert "data_status" in dashboard, "ç¼ºå°‘æ•°æ®çŠ¶æ€"
    assert "user_stats" in dashboard, "ç¼ºå°‘ç”¨æˆ·ç»Ÿè®¡"

    print(f"âœ… å¸‚åœºæ¦‚è§ˆ: {dashboard['market_overview']['total_stocks']}åªè‚¡ç¥¨")
    print(f"âœ… è‡ªé€‰è‚¡è¡¨ç°: {len(dashboard['watchlist_performance'])}åªè‡ªé€‰è‚¡")
    print(f"âœ… èµ„é‡‘æµå‘: {len(dashboard['top_fund_flow'])}åªè‚¡ç¥¨")
    print(f"âœ… æ•°æ®çŠ¶æ€: {dashboard['data_status']['market_status']}")
    print(
        f"âœ… ç”¨æˆ·ç»Ÿè®¡: {dashboard['user_stats']['watchlist_count']}åªè‡ªé€‰è‚¡, {dashboard['user_stats']['strategy_count']}ä¸ªç­–ç•¥"
    )

    return True


def test_sector_performance():
    """æµ‹è¯•æ¿å—è¡¨ç°"""
    print("\n" + "=" * 80)
    print("æµ‹è¯• 2/10: get_sector_performance()")
    print("=" * 80)

    biz_source = get_business_source()

    # æµ‹è¯•è¡Œä¸šè¡¨ç°
    industry_result = biz_source.get_sector_performance(sector_type="industry", limit=5)

    assert "sectors" in industry_result
    industry_perf = industry_result["sectors"]
    assert len(industry_perf) <= 5, "è¡Œä¸šè¡¨ç°æ•°æ®æ•°é‡ä¸æ­£ç¡®"

    print("\nè¡Œä¸šè¡¨ç° (å‰5):")
    for sector in industry_perf[:5]:
        assert "sector_name" in sector
        assert "sector_code" in sector
        assert "avg_change_percent" in sector
        print(f"  - {sector['sector_name']}: {sector['avg_change_percent']:.2f}%")

    # æµ‹è¯•æ¦‚å¿µè¡¨ç°
    concept_result = biz_source.get_sector_performance(sector_type="concept", limit=3)

    assert "sectors" in concept_result
    concept_perf = concept_result["sectors"]
    assert len(concept_perf) <= 3, "æ¦‚å¿µè¡¨ç°æ•°æ®æ•°é‡ä¸æ­£ç¡®"
    print(f"\nâœ… è¡Œä¸šè¡¨ç°: {len(industry_perf)}ä¸ªè¡Œä¸š")
    print(f"âœ… æ¦‚å¿µè¡¨ç°: {len(concept_perf)}ä¸ªæ¦‚å¿µ")

    return True


def test_backtest_execution():
    """æµ‹è¯•å›æµ‹æ‰§è¡Œ"""
    print("\n" + "=" * 80)
    print("æµ‹è¯• 3/10: execute_backtest()")
    print("=" * 80)

    biz_source = get_business_source()

    # æ‰§è¡Œå›æµ‹
    strategy_config = {
        "name": "åŒå‡çº¿ç­–ç•¥",
        "type": "ma_cross",
        "parameters": {
            "short_window": 5,
            "long_window": 20,
            "stop_loss": 0.05,
            "take_profit": 0.10,
        },
    }

    symbols = ["600000", "000001", "600519"]
    start_date = (datetime.now() - timedelta(days=365)).date()
    end_date = datetime.now().date()

    result = biz_source.execute_backtest(
        user_id=1,
        strategy_config=strategy_config,
        symbols=symbols,
        start_date=start_date,
        end_date=end_date,
        initial_capital=100000.0,
    )

    assert "backtest_id" in result
    assert "equity_curve" in result
    assert "trades" in result
    assert "positions" in result
    assert "total_return" in result

    print("\nå›æµ‹ç»“æœ:")
    print(f"  - å›æµ‹ID: {result['backtest_id']}")
    print(f"  - æ€»æ”¶ç›Šç‡: {result['total_return']:.2f}%")
    print(f"  - å¹´åŒ–æ”¶ç›Šç‡: {result['annual_return']:.2f}%")
    print(f"  - æœ€å¤§å›æ’¤: {result['max_drawdown']:.2f}%")
    print(f"  - å¤æ™®æ¯”ç‡: {result['sharpe_ratio']:.2f}")
    print(f"  - èƒœç‡: {result['win_rate']:.2f}%")
    print(f"  - äº¤æ˜“æ¬¡æ•°: {len(result['trades'])}ç¬”")
    print(f"  - æŒä»“æ•°: {len(result['positions'])}åª")
    print(f"  - æƒç›Šæ›²çº¿ç‚¹æ•°: {len(result['equity_curve'])}ä¸ª")

    print("\nâœ… å›æµ‹æ‰§è¡ŒæˆåŠŸ")

    return result["backtest_id"]


def test_backtest_results(backtest_id):
    """æµ‹è¯•å›æµ‹ç»“æœæ£€ç´¢"""
    print("\n" + "=" * 80)
    print("æµ‹è¯• 4/10: get_backtest_results()")
    print("=" * 80)

    biz_source = get_business_source()

    # æŒ‰IDæŸ¥è¯¢
    results = biz_source.get_backtest_results(user_id=1, backtest_id=backtest_id)
    assert len(results) > 0, "æœªæ‰¾åˆ°å›æµ‹ç»“æœ"
    assert results[0]["backtest_id"] == backtest_id
    print(f"âœ… æŒ‰IDæŸ¥è¯¢æˆåŠŸ: {backtest_id}")

    # æŒ‰ç”¨æˆ·æŸ¥è¯¢
    results = biz_source.get_backtest_results(user_id=1, limit=10)
    assert len(results) > 0, "ç”¨æˆ·æ²¡æœ‰å›æµ‹ç»“æœ"
    print(f"âœ… æŒ‰ç”¨æˆ·æŸ¥è¯¢æˆåŠŸ: æ‰¾åˆ°{len(results)}ä¸ªå›æµ‹ç»“æœ")

    return True


def test_risk_metrics():
    """æµ‹è¯•é£é™©æŒ‡æ ‡è®¡ç®—"""
    print("\n" + "=" * 80)
    print("æµ‹è¯• 5/10: calculate_risk_metrics()")
    print("=" * 80)

    biz_source = get_business_source()

    portfolio = [
        {"symbol": "600000", "quantity": 1000, "price": 10.5, "avg_cost": 10.0},
        {"symbol": "000001", "quantity": 2000, "price": 16.0, "avg_cost": 15.0},
        {"symbol": "600519", "quantity": 100, "price": 1850.0, "avg_cost": 1800.0},
    ]

    risk_metrics = biz_source.calculate_risk_metrics(user_id=1, portfolio=portfolio)

    assert "var_1day" in risk_metrics
    assert "var_5day" in risk_metrics
    assert "volatility_annual" in risk_metrics
    assert "concentration_risk" in risk_metrics
    assert "industry_exposure" in risk_metrics

    print("\né£é™©æŒ‡æ ‡:")
    print(f"  - 1æ—¥VaR: Â¥{risk_metrics['var_1day']:.2f}")
    print(f"  - 5æ—¥VaR: Â¥{risk_metrics['var_5day']:.2f}")
    print(f"  - æ³¢åŠ¨ç‡(å¹´åŒ–): {risk_metrics['volatility_annual']:.2f}")
    print(f"  - Beta: {risk_metrics.get('beta', 0):.2f}")
    print(
        f"  - é›†ä¸­åº¦é£é™© (Top1): {risk_metrics['concentration_risk']['top1_weight']:.2f}"
    )
    print(f"  - è¡Œä¸šæš´éœ²: {len(risk_metrics['industry_exposure'])}ä¸ªè¡Œä¸š")

    print("\nâœ… é£é™©æŒ‡æ ‡è®¡ç®—æˆåŠŸ")

    return True


def test_risk_alerts():
    """æµ‹è¯•é£é™©é¢„è­¦æ£€æŸ¥"""
    print("\n" + "=" * 80)
    print("æµ‹è¯• 6/10: check_risk_alerts()")
    print("=" * 80)

    biz_source = get_business_source()

    portfolio = [
        {"symbol": "600000", "quantity": 1000, "price": 10.5, "avg_cost": 10.0},
        {"symbol": "000001", "quantity": 2000, "price": 16.0, "avg_cost": 15.0},
    ]

    alerts = biz_source.check_risk_alerts(user_id=1, portfolio=portfolio)

    assert isinstance(alerts, list)

    if alerts:
        print("\nè§¦å‘çš„é¢„è­¦:")
        for alert in alerts:
            print(
                f"  - [{alert['severity']}] {alert['alert_name']}: {alert['message']}"
            )
            print(
                f"    è§¦å‘å€¼: {alert['triggered_value']}, é˜ˆå€¼: {alert['threshold_value']}"
            )
    else:
        print("âœ… æ²¡æœ‰è§¦å‘çš„é¢„è­¦")

    print(f"\nâœ… é¢„è­¦æ£€æŸ¥å®Œæˆ: {len(alerts)}ä¸ªè§¦å‘é¢„è­¦")

    return True


def test_trading_signals():
    """æµ‹è¯•äº¤æ˜“ä¿¡å·åˆ†æ"""
    print("\n" + "=" * 80)
    print("æµ‹è¯• 7/10: analyze_trading_signals()")
    print("=" * 80)

    biz_source = get_business_source()

    # é¦–å…ˆåˆ›å»ºå‡ ä¸ªç­–ç•¥
    relational = biz_source.rel
    relational.save_strategy_config(
        user_id=1,
        strategy_name="å‡çº¿ç­–ç•¥1",
        strategy_type="ma_cross",
        parameters={"short": 5, "long": 20, "symbols": ["600000", "000001"]},
    )
    relational.save_strategy_config(
        user_id=1,
        strategy_name="MACDç­–ç•¥",
        strategy_type="macd",
        parameters={"fast": 12, "slow": 26, "signal": 9, "symbols": ["600519"]},
    )

    strategies = relational.get_strategy_configs(user_id=1)
    strategy_ids = [s["id"] for s in strategies if s["status"] == "active"]

    signals = biz_source.analyze_trading_signals(user_id=1, strategy_ids=strategy_ids)

    assert isinstance(signals, list)

    buy_signals = [s for s in signals if s["signal_type"] == "buy"]
    sell_signals = [s for s in signals if s["signal_type"] == "sell"]
    hold_signals = [s for s in signals if s["signal_type"] == "hold"]

    print("\näº¤æ˜“ä¿¡å·:")
    print(f"  - ä¹°å…¥ä¿¡å·: {len(buy_signals)}ä¸ª")
    print(f"  - å–å‡ºä¿¡å·: {len(sell_signals)}ä¸ª")
    print(f"  - æŒæœ‰ä¿¡å·: {len(hold_signals)}ä¸ª")

    if buy_signals:
        print("\n  ä¹°å…¥ä¿¡å·è¯¦æƒ…:")
        for sig in buy_signals[:3]:  # æ˜¾ç¤ºå‰3ä¸ª
            print(
                f"    - {sig['symbol']}: {sig['reason']} (å¼ºåº¦: {sig['signal_strength']:.2f})"
            )

    print(f"\nâœ… äº¤æ˜“ä¿¡å·åˆ†æå®Œæˆ: {len(signals)}ä¸ªä¿¡å·")

    return True


def test_portfolio_analysis():
    """æµ‹è¯•ç»„åˆåˆ†æ"""
    print("\n" + "=" * 80)
    print("æµ‹è¯• 8/10: get_portfolio_analysis()")
    print("=" * 80)

    biz_source = get_business_source()

    portfolio = [
        {"symbol": "600000", "quantity": 1000, "price": 10.5, "avg_cost": 10.0},
        {"symbol": "000001", "quantity": 2000, "price": 16.0, "avg_cost": 15.0},
        {"symbol": "600519", "quantity": 100, "price": 1850.0, "avg_cost": 1800.0},
    ]

    analysis = biz_source.get_portfolio_analysis(
        user_id=1, portfolio=portfolio, benchmark="sh000001"
    )

    assert "holdings" in analysis
    assert "total_value" in analysis
    assert "benchmark_comparison" in analysis

    print("\nç»„åˆåˆ†æ:")
    print(f"  - æŒä»“æ•°: {len(analysis['holdings'])}åª")
    print(f"  - æ€»å¸‚å€¼: Â¥{analysis['total_value']:,.2f}")
    print(f"  - æ€»æˆæœ¬: Â¥{analysis['total_cost']:,.2f}")
    print(f"  - æ€»ç›ˆäº: Â¥{analysis['total_profit']:,.2f}")
    print(f"  - ç›ˆäºç‡: {analysis['total_return']:.2f}%")

    if analysis["holdings"]:
        print("\n  æŒä»“æ˜ç»† (å‰3åª):")
        for holding in analysis["holdings"][:3]:
            print(
                f"    - {holding['symbol']}: "
                f"{holding['quantity']}è‚¡, "
                f"ç›ˆäº Â¥{holding['profit_loss']:,.2f} ({holding['profit_loss_percent']:.2f}%)"
            )

    comp = analysis["benchmark_comparison"]
    print("\n  åŸºå‡†æ¯”è¾ƒ:")
    print(f"    - ç»„åˆæ”¶ç›Š: {comp['portfolio_return']:.2f}%")
    print(f"    - åŸºå‡†æ”¶ç›Š: {comp['benchmark_return']:.2f}%")
    print(f"    - Alpha: {comp['alpha']:.2f}%")

    print("\nâœ… ç»„åˆåˆ†æå®Œæˆ")

    return True


def test_attribution_analysis():
    """æµ‹è¯•å½’å› åˆ†æ"""
    print("\n" + "=" * 80)
    print("æµ‹è¯• 9/10: perform_attribution_analysis()")
    print("=" * 80)

    biz_source = get_business_source()

    portfolio = [
        {"symbol": "600000", "quantity": 1000, "price": 10.5, "avg_cost": 10.0},
        {"symbol": "000001", "quantity": 2000, "price": 16.0, "avg_cost": 15.0},
        {"symbol": "600519", "quantity": 100, "price": 1850.0, "avg_cost": 1800.0},
    ]

    attribution = biz_source.perform_attribution_analysis(
        user_id=1,
        portfolio=portfolio,
        start_date=(datetime.now() - timedelta(days=90)).date(),
        end_date=datetime.now().date(),
    )

    assert "sector_attribution" in attribution
    assert "stock_attribution" in attribution
    assert "total_return" in attribution

    print("\nå½’å› åˆ†æ:")
    print(f"  - æ€»æ”¶ç›Š: {attribution['total_return']:.2f}%")
    print(f"  - é…ç½®æ•ˆåº”: {attribution['allocation_effect']:.2f}%")
    print(f"  - é€‰æ‹©æ•ˆåº”: {attribution['selection_effect']:.2f}%")

    print("\n  è¡Œä¸šå½’å› :")
    for sector_name, contribution in attribution["sector_attribution"].items():
        print(f"    - {sector_name}: è´¡çŒ® {contribution:.2f}%")

    print("\n  ä¸ªè‚¡å½’å›  (å‰5):")
    for stock in attribution["stock_attribution"][:5]:
        print(f"    - {stock['symbol']}: è´¡çŒ® {stock['contribution']:.2f}%")

    print("\nâœ… å½’å› åˆ†æå®Œæˆ")

    return True


def test_stock_screener():
    """æµ‹è¯•é€‰è‚¡å™¨"""
    print("\n" + "=" * 80)
    print("æµ‹è¯• 10/10: execute_stock_screener()")
    print("=" * 80)

    biz_source = get_business_source()

    criteria = {
        "pe_min": 0,
        "pe_max": 30,
        "pb_min": 0,
        "pb_max": 5,
        "roe_min": 10,
        "market_cap_min": 10,  # 10äº¿
    }

    results = biz_source.execute_stock_screener(
        criteria=criteria, sort_by="score", limit=10
    )

    assert isinstance(results, list)
    assert len(results) <= 10

    print(f"\né€‰è‚¡ç»“æœ (å…±{len(results)}åª):")
    for i, stock in enumerate(results[:5], 1):
        print(f"\n  {i}. {stock['symbol']} {stock['name']}")
        print(f"     - ç»¼åˆè¯„åˆ†: {stock['score']:.2f}")
        print(
            f"     - PE: {stock['pe_ratio']:.2f}, PB: {stock['pb_ratio']:.2f}, ROE: {stock['roe'] * 100:.2f}%"
        )
        print(f"     - å¸‚å€¼: Â¥{stock['market_cap'] / 100000000:.2f}äº¿")

    print(f"\nâœ… é€‰è‚¡å™¨æ‰§è¡Œå®Œæˆ: {len(results)}åªè‚¡ç¥¨")

    return True


def run_all_tests():
    """è¿è¡Œæ‰€æœ‰æµ‹è¯•"""
    print("\n" + "=" * 80)
    print(" MockBusinessDataSource åŠŸèƒ½æµ‹è¯•")
    print("=" * 80)
    print(f"å¼€å§‹æ—¶é—´: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}")

    tests = [
        ("ä»ªè¡¨ç›˜æ‘˜è¦", test_dashboard_summary),
        ("æ¿å—è¡¨ç°", test_sector_performance),
        ("å›æµ‹æ‰§è¡Œ", test_backtest_execution),
        ("å›æµ‹ç»“æœæ£€ç´¢", None),  # éœ€è¦å‰ä¸€ä¸ªæµ‹è¯•çš„ID
        ("é£é™©æŒ‡æ ‡è®¡ç®—", test_risk_metrics),
        ("é£é™©é¢„è­¦æ£€æŸ¥", test_risk_alerts),
        ("äº¤æ˜“ä¿¡å·åˆ†æ", test_trading_signals),
        ("ç»„åˆåˆ†æ", test_portfolio_analysis),
        ("å½’å› åˆ†æ", test_attribution_analysis),
        ("é€‰è‚¡å™¨", test_stock_screener),
    ]

    passed = 0
    failed = 0

    try:
        # æµ‹è¯•1-3
        for name, test_func in tests[:3]:
            try:
                result = test_func()
                if result:
                    passed += 1
            except Exception as e:
                print(f"âŒ {name}æµ‹è¯•å¤±è´¥: {str(e)}")
                failed += 1
                raise

        # æµ‹è¯•4éœ€è¦å›æµ‹ID
        try:
            backtest_id = result  # ä»æµ‹è¯•3è·å–
            if test_backtest_results(backtest_id):
                passed += 1
        except Exception as e:
            print(f"âŒ å›æµ‹ç»“æœæ£€ç´¢æµ‹è¯•å¤±è´¥: {str(e)}")
            failed += 1
            raise

        # æµ‹è¯•5-10
        for name, test_func in tests[4:]:
            try:
                if test_func():
                    passed += 1
            except Exception as e:
                print(f"âŒ {name}æµ‹è¯•å¤±è´¥: {str(e)}")
                failed += 1
                raise

        # æ€»ç»“
        print("\n" + "=" * 80)
        print(" æµ‹è¯•æ€»ç»“")
        print("=" * 80)
        print(f"âœ… é€šè¿‡: {passed}/10")
        print(f"âŒ å¤±è´¥: {failed}/10")
        print(f"å®Œæˆæ—¶é—´: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}")

        if failed == 0:
            print("\nğŸ‰ æ‰€æœ‰æµ‹è¯•é€šè¿‡ï¼MockBusinessDataSourceåŠŸèƒ½å®Œæ•´ï¼")
            return True
        else:
            print(f"\nâš ï¸  æœ‰{failed}ä¸ªæµ‹è¯•å¤±è´¥")
            return False

    except Exception as e:
        print("\n" + "=" * 80)
        print(f"âŒ æµ‹è¯•å¼‚å¸¸ç»ˆæ­¢: {str(e)}")
        print("=" * 80)
        import traceback

        traceback.print_exc()
        return False


if __name__ == "__main__":
    success = run_all_tests()
    sys.exit(0 if success else 1)
