"""
数据库查询执行器 - 从 database_service.py 拆分
职责：股票数据查询、实时数据、历史数据
遵循 TDD 原则：仅实现满足测试的最小功能
"""

import logging
from typing import List, Dict, Any, Optional
from datetime import datetime
import time

# 设置日志
logger = logging.getLogger(__name__)


class DatabaseQueryExecutor:
    """数据库查询执行器 - 专注于数据查询操作"""

    def __init__(self):
        """初始化查询执行器"""
        self.query_cache = {}
        self.cache_ttl = 300  # 5分钟缓存
        self.performance_stats = {
            "total_queries": 0,
            "cache_hits": 0,
            "avg_response_time": 0.0,
        }

    def get_stock_list(self, params: Optional[Dict] = None) -> List[Dict]:
        """
        获取股票列表

        Args:
            params: 查询参数

        Returns:
            List[Dict]: 股票列表
        """
        start_time = time.time()

        try:
            # 检查缓存
            cache_key = "stock_list"
            cached_result = self._get_from_cache(cache_key)
            if cached_result:
                self.performance_stats["cache_hits"] += 1
                return cached_result

            # 模拟数据库查询
            result = self._execute_query("SELECT * FROM stocks")

            # 缓存结果
            self._save_to_cache(cache_key, result)

            # 更新性能统计
            response_time = time.time() - start_time
            self._update_performance_stats(response_time)

            return result or []

        except Exception as e:
            logger.error(f"Failed to get stock list: {str(e)}")
            return []

    def get_stock_detail(self, stock_code: str) -> Dict:
        """
        获取股票详情

        Args:
            stock_code: 股票代码

        Returns:
            Dict: 股票详情
        """
        start_time = time.time()

        try:
            # 参数验证
            if not stock_code or not isinstance(stock_code, str):
                return {}

            # 检查缓存
            cache_key = f"stock_detail_{stock_code}"
            cached_result = self._get_from_cache(cache_key)
            if cached_result:
                self.performance_stats["cache_hits"] += 1
                return cached_result

            # 模拟数据库查询
            query = f"SELECT * FROM stock_details WHERE symbol = '{stock_code}'"
            result = self._execute_query(query)

            # 缓存结果
            if result:
                self._save_to_cache(cache_key, result[0] if isinstance(result, list) else result)

            # 更新性能统计
            response_time = time.time() - start_time
            self._update_performance_stats(response_time)

            return result[0] if isinstance(result, list) and result else (result or {})

        except Exception as e:
            logger.error(f"Failed to get stock detail for {stock_code}: {str(e)}")
            return {}

    def get_realtime_quotes(self, symbols: List[str]) -> List[Dict]:
        """
        获取实时行情

        Args:
            symbols: 股票代码列表

        Returns:
            List[Dict]: 实时行情数据
        """
        start_time = time.time()

        try:
            # 参数验证
            if not symbols or not isinstance(symbols, list):
                return []

            # 检查缓存
            cache_key = f"realtime_quotes_{'_'.join(symbols)}"
            cached_result = self._get_from_cache(cache_key)
            if cached_result:
                self.performance_stats["cache_hits"] += 1
                return cached_result

            # 模拟实时数据查询
            result = []
            for symbol in symbols:
                quote_data = {
                    "symbol": symbol,
                    "price": 10.0 + hash(symbol) % 100 / 10,
                    "change": (hash(symbol) % 20 - 10) / 10,
                    "volume": hash(symbol) % 10000 + 1000,
                    "timestamp": datetime.now().isoformat(),
                }
                result.append(quote_data)

            # 缓存结果（实时数据缓存时间较短）
            self._save_to_cache(cache_key, result, ttl=60)  # 1分钟缓存

            # 更新性能统计
            response_time = time.time() - start_time
            self._update_performance_stats(response_time)

            return result

        except Exception as e:
            logger.error(f"Failed to get realtime quotes: {str(e)}")
            return []

    def get_batch_indicators(self, symbols: List[str]) -> Dict:
        """
        批量获取指标数据

        Args:
            symbols: 股票代码列表

        Returns:
            Dict: 指标数据
        """
        start_time = time.time()

        try:
            # 参数验证
            if not symbols or not isinstance(symbols, list):
                return {}

            # 检查缓存
            cache_key = f"batch_indicators_{'_'.join(symbols)}"
            cached_result = self._get_from_cache(cache_key)
            if cached_result:
                self.performance_stats["cache_hits"] += 1
                return cached_result

            # 模拟批量指标查询
            result = {}
            for symbol in symbols:
                result[symbol] = {
                    "pe": 10.0 + hash(symbol) % 50 / 10,
                    "pb": 1.0 + hash(symbol) % 30 / 10,
                    "roe": hash(symbol) % 20 / 10,
                    "market_cap": hash(symbol) % 1000000000 + 100000000,
                }

            # 缓存结果
            self._save_to_cache(cache_key, result)

            # 更新性能统计
            response_time = time.time() - start_time
            self._update_performance_stats(response_time)

            return result

        except Exception as e:
            logger.error(f"Failed to get batch indicators: {str(e)}")
            return {}

    def get_stock_history(self, params: Optional[Dict] = None) -> Dict:
        """
        获取股票历史数据

        Args:
            params: 查询参数

        Returns:
            Dict: 历史数据
        """
        try:
            # 参数处理
            symbol = params.get("symbol") if params else None
            start_date = params.get("start_date") if params else None
            end_date = params.get("end_date") if params else None

            if not symbol:
                return {}

            # 模拟历史数据查询
            result = {
                "symbol": symbol,
                "data": [],
                "start_date": start_date,
                "end_date": end_date,
            }

            # 生成模拟历史数据
            if start_date and end_date:
                # 简单的历史数据生成
                for i in range(30):  # 30天数据
                    result["data"].append(
                        {
                            "date": f"2024-01-{i + 1:02d}",
                            "open": 10.0 + i * 0.1,
                            "high": 10.5 + i * 0.1,
                            "low": 9.8 + i * 0.1,
                            "close": 10.2 + i * 0.1,
                            "volume": 10000 + i * 100,
                        }
                    )

            return result

        except Exception as e:
            logger.error(f"Failed to get stock history: {str(e)}")
            return {}

    def _execute_query(self, query: str) -> Any:
        """
        执行数据库查询

        Args:
            query: SQL查询语句

        Returns:
            查询结果
        """
        # 模拟查询执行
        logger.debug(f"Executing query: {query[:50]}...")

        # 根据查询类型返回不同的模拟数据
        if "SELECT" in query.upper():
            if "stocks" in query.lower():
                return [
                    {
                        "symbol": "000001",
                        "name": "平安银行",
                        "industry": "银行",
                        "market": "深交所",
                    },
                    {
                        "symbol": "000002",
                        "name": "万科A",
                        "industry": "房地产",
                        "market": "深交所",
                    },
                    {
                        "symbol": "600000",
                        "name": "浦发银行",
                        "industry": "银行",
                        "market": "上交所",
                    },
                ]
            elif "stock_details" in query.lower():
                return [
                    {
                        "symbol": "000001",
                        "name": "平安银行",
                        "industry": "银行",
                        "market": "深交所",
                        "listing_date": "1991-04-03",
                        "total_shares": 19405918198,
                        "float_shares": 19405918198,
                    }
                ]
            else:
                return [{"data": "mock_result"}]
        else:
            return {"status": "success"}

    def _execute_batch_query(self, queries: List[str]) -> List[Any]:
        """
        执行批量查询

        Args:
            queries: 查询列表

        Returns:
            List[Any]: 查询结果列表
        """
        results = []
        for query in queries:
            try:
                result = self._execute_query(query)
                results.append(result)
            except Exception as e:
                logger.error(f"Batch query failed: {str(e)}")
                results.append(None)
        return results

    def _get_from_cache(self, key: str) -> Optional[Any]:
        """从缓存获取数据"""
        if key in self.query_cache:
            cached_data, timestamp = self.query_cache[key]
            if time.time() - timestamp < self.cache_ttl:
                return cached_data
            else:
                del self.query_cache[key]
        return None

    def _save_to_cache(self, key: str, data: Any, ttl: Optional[int] = None) -> None:
        """保存数据到缓存"""
        self.query_cache[key] = (data, time.time())

    def _update_performance_stats(self, response_time: float) -> None:
        """更新性能统计"""
        self.performance_stats["total_queries"] += 1
        total = self.performance_stats["total_queries"]
        current_avg = self.performance_stats["avg_response_time"]
        self.performance_stats["avg_response_time"] = (current_avg * (total - 1) + response_time) / total

    def get_performance_stats(self) -> Dict[str, Any]:
        """获取性能统计信息"""
        return {
            **self.performance_stats,
            "cache_hit_rate": self.performance_stats["cache_hits"] / max(1, self.performance_stats["total_queries"]),
            "cache_size": len(self.query_cache),
        }

    def clear_cache(self) -> None:
        """清空查询缓存"""
        self.query_cache.clear()
        logger.info("Query cache cleared")
